--- a/.classpath
+++ b/.classpath
@@ -7,5 +7,6 @@
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="UML"/>
+	<classpathentry kind="src" path="bildes"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
